welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:4: error: not found: value estsurBiscuit
if (estsurBiscuit()) { bis = bis + 1 }
    ^